# pcsample

./: .gitignore  CMakeLists.txt  checks.ipynb  cheks.ipynb  fixed_generator.py  generator.py  piprequirements
inc/: SampleBase.hh
pcsample/: __init__.py  sample.py  utils.py
src/: CMakeLists.txt  SampleBase.cc  main.cc
test/: test_sample.py  test_util.py
voro++/: CMakeLists.txt  vorop.sh
voro++/src/: CMakeLists.txt
